contoller test page finished

--- a/controller.html
+++ b/controller.html
@@ -7,7 +7,29 @@
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
-      <pre id="test"></div>
+      <pre id="test">
+A                      0
+B                      0
+X                      0
+Y                      0
+Left shoulder          0
+Right shoulder         0
+Left trigger           0
+Right trigger          0
+Back                   0
+Start                  0
+Left joystick press    0
+Right joystick press   0
+Dpad Up                0
+Dpad Down              0
+Dpad Left              0
+Dped Right             0
+Silver button          0
+Left stick horizontal  0
+Left stick vertical    0
+Right stick horizontal 0
+Left stick vertical    0
+    </div>
   </body>
 
 <script>
