--- a/controller.html
+++ b/controller.html
@@ -24,7 +24,7 @@ Dpad Up                0
 Dpad Down              0
 Dpad Left              0
 Dped Right             0
-Silver button          0
+Logo button            0
 Left stick horizontal  0
 Left stick vertical    0
 Right stick horizontal 0
@@ -76,7 +76,7 @@ function gameLoop() {
     output.innerHTML += "Dpad Down              " +gp.buttons[13].value + "<br/>";
     output.innerHTML += "Dpad Left              " +gp.buttons[14].value + "<br/>";
     output.innerHTML += "Dped Right             " +gp.buttons[15].value + "<br/>";
-    output.innerHTML += "Silver button          " +gp.buttons[16].value + "<br/>";
+    output.innerHTML += "Logo button            " +gp.buttons[16].value + "<br/>";
     output.innerHTML += "Left stick horizontal  " +gp.axes[0] + "<br/>";
     output.innerHTML += "Left stick vertical    " +gp.axes[1] + "<br/>";
     output.innerHTML += "Right stick horizontal " +gp.axes[2] + "<br/>";
