--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     import * as THREE from './three.module.js';
     import { PointerLockControls } from './pointerLockControls.js';
 </script>
-<script type="module" src="./box.js"></script>
+<script type="module" src="./core2.js"></script>
 </body>
 </html>
